static/sudokugame/board-style.css
body {
    background-color: CadetBlue;
}

#sudoku_board {
    /* box-shadow: 0px 0px 5px 5px #bdc3c7; */
    box-shadow: 0 0 5px 5px black;
    width:30%;
    display: grid;
    grid-template-columns: repeat(9, 1fr);
    margin: auto;
}

.cell {
    background-color: white;
    text-align: center;
    font-size: 2.5vw;
    vertical-align: middle;
    border: 1px solid lightgray;
    box-sizing: content-box;
    caret-color: transparent;
    overflow: hidden;
}

.cell:hover {
    cursor: pointer;
}

#focusedCell {
    background-color: #6495ED;
    font-weight: bold;
    color: white;
    border: transparent;
    outline: transparent;
}

.fixedCell {
    background-color: lightgrey;
}

.correctCell {
    background-color: lawngreen;
}

.relatedNumCell {
    color: #6495ED;
    font-weight: bold;
}

/* Based on @T30's answer: https://stackoverflow.com/questions/11997032/how-to-get-box-shadow-on-left-right-sides-only */

.relatedColCell {
    box-shadow: inset -6px 0 6px -6px #6495ED, inset 6px 0 6px -6px #6495ED;
}

.relatedRowCell {
    box-shadow: inset 0 -6px 6px -6px #6495ED, inset 0 6px 6px -6px #6495ED;
}

.relatedGridCell {
    background-color: #FFE4B5;
}

.cell:nth-child(9n+3), :nth-child(9n+6) {
    border-right: 1px solid black;
}

.cell:nth-child(9n+4), :nth-child(9n+7) {
    border-left: 1px solid black;
}

.cell:nth-child(n+19):nth-child(-n+27), :nth-child(n+46):nth-child(-n+54) {
    border-bottom: 1px solid black;
}

.cell:nth-child(n+28):nth-child(-n+36), :nth-child(n+55):nth-child(-n+63) {
    border-top: 1px solid black;
}

